tests/NormalTests/paczka1/small_fuzzy/97211182.err
Error in line 1: Imwow9ULAd A111 9,3
Error in line 8: A4 A236 15,0
Error in line 3: XxI4h A111 51,4
Error in line 12: A4 A236 73,1
Error in line 14: A4 A4 70,9
